WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273957
REGRESSION (
278369@main
): [ Ventura Debug ] 8X WebGL tests and js/dom/typed-array-set-different-types.html are crashing on Ventura
https://bugs.webkit.org/show_bug.cgi?id=273957
Summary
REGRESSION (278369@main): [ Ventura Debug ] 8X WebGL tests and js/dom/typed-a...
Jay Stfleur
Reported
2024-05-09 10:14:21 PDT
These 6 test are consistent crashing : fast/canvas/webgl/array-message-passing.html fast/canvas/webgl/array-unit-tests.html fast/canvas/webgl/arraybuffer-transfer-of-control.html js/dom/typed-array-set-different-types.html webgl/1.0.3/conformance/typedarrays/array-unit-tests.html webgl/2.0.0/conformance/typedarrays/array-unit-tests.html These 3 are somewhat flaky: fast/canvas/webgl/typed-arrays-in-workers.html webgl/1.0.3/conformance/typedarrays/typed-arrays-in-workers.html webgl/2.0.0/conformance/typedarrays/typed-arrays-in-workers.html all 9 tests seemed to have regressed after changes on
278369@main
Buildbot URL:
https://build.webkit.org/#/builders/701/builds/4618
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fcanvas%2Fwebgl%2Farray-message-passing.html&test=fast%2Fcanvas%2Fwebgl%2Farray-unit-tests.html&test=fast%2Fcanvas%2Fwebgl%2Farraybuffer-transfer-of-control.html&test=fast%2Fcanvas%2Fwebgl%2Ftyped-arrays-in-workers.html&test=js%2Fdom%2Ftyped-array-set-different-types.html&test=webgl%2F1.0.3%2Fconformance%2Ftypedarrays%2Farray-unit-tests.html&test=webgl%2F1.0.3%2Fconformance%2Ftypedarrays%2Ftyped-arrays-in-workers.html&test=webgl%2F2.0.0%2Fconformance%2Ftypedarrays%2Farray-unit-tests.html&test=webgl%2F2.0.0%2Fconformance%2Ftypedarrays%2Ftyped-arrays-in-workers.html&version_name=Ventura&style=debug
Diff/Image Diff/Crash Log: stderr: ASSERTION FAILED: structure /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/JavaScriptCore/runtime/StructureID.h(147) : static JSC::StructureID JSC::StructureID::encode(const JSC::Structure *) com.apple.WebKit.WebContent.Development terminated (pid 55146) for reason: crash Reproducibility: No crash log data was output but I was able to reproduce using command run-webkit-test webgl/2.0.0/conformance/typedarrays/array-unit-tests.html -v --iterations 5
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-09 10:14:45 PDT
<
rdar://problem/127820540
>
Yusuke Suzuki
Comment 2
2024-05-09 10:38:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28348
EWS
Comment 3
2024-05-09 10:42:14 PDT
Committed
278576@main
(5c91f30e9d4f): <
https://commits.webkit.org/278576@main
> Reviewed commits have been landed. Closing PR #28348 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug