Unreviewed, REGRESSION (278369@main): [ Ventura Debug ] 8X WebGL tests and js/dom/typed-array-set-different-types.html are crashing on Ventura https://bugs.webkit.org/show_bug.cgi?id=273957 rdar://127820540

We do not need to create StructureID from that.

* Source/JavaScriptCore/bytecode/InlineCacheCompiler.cpp:
(JSC::InlineCacheCompiler::regenerate):

Canonical link: https://commits.webkit.org/278576@main